add geocoder control (search box) to map field #5 #2

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@vue/compiler-sfc": "^3.2.29",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.49",
+        "ol-geocoder": "^4.1.2",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
         "sass-loader": "^13.0.0",
