remove static centered marker from map-point-field and use ol-style-icon instead.

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "multi polygon",
         "spatial",
         "openlayers",
+        "geocoder",
         "nova"
     ],
     "license": "MIT",
