--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
         "watch-poll": "mix watch --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "nova:install": "npm --prefix='../../vendor/laravel/nova' ci"
     },
     "dependencies": {
-        "@vue/compiler-sfc": "^3.2.29",
+        "@vue/compiler-sfc": "^3.2.22",
         "cross-env": "^7.0.3",
+        "form-backend-validation": "^2.3.3",
         "laravel-mix": "^6.0.49",
+        "laravel-nova": "*",
+        "node-sass": "^7.0.3",
         "ol-geocoder": "^4.1.2",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
-        "sass-loader": "^13.0.0",
+        "sass-loader": "^13.1.0",
         "vue": "^3.2.37",
         "vue-loader": "^16.8.3",
         "vue-template-compiler": "^2.6.14",
