--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
         "nova:install": "npm --prefix='../../vendor/laravel/nova' ci"
     },
     "dependencies": {
+        "@kirtandesai/ol-geocoder": "^5.0.4",
         "@vue/compiler-sfc": "^3.2.29",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.49",
-        "ol-geocoder": "^4.1.2",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
         "sass-loader": "^13.0.0",
