--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@vue/compiler-sfc": "^3.2.29",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.49",
+        "polylabel": "^1.1.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
         "sass-loader": "^13.0.0",
