--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     ],
     "license": "MIT",
     "require": {
-        "illuminate/support": "^8.0|^9.0",
+        "illuminate/support": "^8.0|^9.0|^10.0",
         "laravel/nova": "^4.0",
-        "matanyadaev/laravel-eloquent-spatial": "^2.0.1"
+        "matanyadaev/laravel-eloquent-spatial": "^3.0.0"
     },
     "autoload": {
         "psr-4": {
