--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "illuminate/support": "^8.0|^9.0|^10.0",
         "laravel/nova": "^4.0",
-        "matanyadaev/laravel-eloquent-spatial": "^3.0.0"
+        "matanyadaev/laravel-eloquent-spatial": "^2.0.1|^3.0"
     },
     "autoload": {
         "psr-4": {
