--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
         "nova:install": "npm --prefix='../../vendor/laravel/nova' ci"
     },
     "dependencies": {
-        "@kirtandesai/ol-geocoder": "^5.0.6",
         "@vue/compiler-sfc": "^3.2.29",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.49",
         "ol": "8.1.0",
+        "ol-geocoder": "4.3.0",
         "polylabel": "^1.1.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
