--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "nova-map-field",
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -14,8 +15,10 @@
         "@vue/compiler-sfc": "^3.2.29",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.49",
-        "ol": "8.1.0",
-        "ol-geocoder": "4.3.0",
+        "ol": "^8.1.0",
+        "ol-contextmenu": "^5.3.0",
+        "ol-ext": "^4.0.11",
+        "ol-geocoder": "4.3.1",
         "polylabel": "^1.1.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.52.1",
@@ -23,6 +26,6 @@
         "vue": "^3.2.37",
         "vue-loader": "^16.8.3",
         "vue-template-compiler": "^2.6.14",
-        "vue3-openlayers": "^2.0.0-1"
+        "vue3-openlayers": "^3.0.0"
     }
 }
