--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "geocoder",
         "nova"
     ],
-    "license": "MIT",
+    "type": "library",
     "require": {
         "illuminate/support": "^8.0|^9.0|^10.0",
         "laravel/nova": "^4.0",
