--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     ],
     "license": "MIT",
     "require": {
-        "illuminate/support": "^8.0|^9.0|^10.0",
+        "illuminate/support": "^10.0|^11.0",
         "laravel/nova": "^4.0",
-        "matanyadaev/laravel-eloquent-spatial": "^2.0.1|^3.0"
+        "matanyadaev/laravel-eloquent-spatial": "^4.2"
     },
     "autoload": {
         "psr-4": {
@@ -31,6 +31,12 @@
             ]
         }
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ],
     "config": {
         "sort-packages": true
     },
