--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
         "@vue/compiler-sfc": "^3.4.21",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.49",
-        "ol": "^8.1.0",
-        "ol-contextmenu": "^5.3.0",
-        "ol-ext": "^4.0.11",
-        "ol-geocoder": "4.3.1",
+        "ol": "^9.0.0",
+        "ol-contextmenu": "^5.4.0",
+        "ol-ext": "^4.0.17",
+        "ol-geocoder": "^4.3.3",
         "polylabel": "^1.1.0",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.52.1",
-        "sass-loader": "^13.0.0",
+        "sass": "^1.72.0",
+        "sass-loader": "^14.1.1",
         "vue": "^3.4.21",
-        "vue-loader": "^16.8.3",
-        "vue-template-compiler": "^2.6.14",
-        "vue3-openlayers": "^3.1.0"
+        "vue-loader": "^17.4.2",
+        "vue-template-compiler": "^2.7.16",
+        "vue3-openlayers": "^6.1.2"
     }
 }
