--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@vue/compiler-sfc": "^3.4.21",
         "cross-env": "^7.0.3",
         "laravel-mix": "^6.0.49",
+        "laravel-nova-ui": "^0.4.12",
         "ol": "^9.0.0",
         "ol-contextmenu": "^5.4.0",
         "ol-ext": "^4.0.17",
