--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "laravel/nova": "^4.0|^5.0",
         "matanyadaev/laravel-eloquent-spatial": "^4.2"
     },
